Reduce height of the uiSlider; There's no need to be too big; Avoids visualization problems.

--- a/src/components/range_slider/index.css
+++ b/src/components/range_slider/index.css
@@ -12,6 +12,11 @@
 #years-range-slider .noUi-handle::before {
   left: 10px;
 }
+
 #years-range-slider .noUi-handle::after {
   left: 13px;
+}
+
+#years-range-slider .noUi-pips-horizontal {
+  height: 50px;
 }
